# burn

./: Cargo.toml
.github/workflows/: validate.yml
crates/burn-autodiff/: Cargo.toml
crates/burn-autodiff/src/: backend.rs  lib.rs  tensor.rs  utils.rs
crates/burn-autodiff/src/checkpoint/: base.rs  builder.rs  retro_forward.rs  state.rs  strategy.rs
crates/burn-autodiff/src/graph/: base.rs  node.rs  traversal.rs
crates/burn-autodiff/src/ops/: base.rs  bool_tensor.rs  int_tensor.rs  tensor.rs
crates/burn-autodiff/src/runtime/: memory_management.rs  server.rs
crates/burn-core/src/optim/: adagrad.rs  adam.rs  adamw.rs  grad_accum.rs  grads.rs  rmsprop.rs  sgd.rs
examples/mnist-no-std/: Cargo.toml  README.md
examples/mnist-no-std/no-std-mnist/: Cargo.toml
examples/mnist-no-std/no-std-mnist/src/: lib.rs  trainer.rs  util.rs
examples/mnist-no-std/src/: main.rs
examples/mnist-no-std/src/commands/: inference.rs  mod.rs  test.rs  train.rs
xtask/src/: main.rs
